<?xml version="1.0"?>
<package format="2">
  <name>rodney_missions</name>
  <version>2.0.0</version>
  <description>The rodney_missions package</description>

  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>

  <license>Apache 2</license>

  <author email="sleepyserver6@gmail.com">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>speech</depend>
  <depend>face_recognition_msgs</depend>  

  <exec_depend>rospy</exec_depend>  
  <exec_depend>smach</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>
